Fixed overlap and responsiveness issue in JourneyForm

--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -6,8 +6,8 @@
 
 .footer {
     position: relative;
-    margin-top: 20px;
-    width: 100%;
+    /* margin-top: 20px;
+    width: 100%; */
     max-height: 80px;
     background-color: #578F6A;
     color: white;
