--- a/client/src/css/JourneyForm.css
+++ b/client/src/css/JourneyForm.css
@@ -1,7 +1,3 @@
-.journeyForm {
-    margin-top: 300px;
-  }
-
 .formlabel {
     color: #1c92a9;
     font-size: large;
@@ -11,6 +7,14 @@
 .submit {
     margin-top: 3em;
 }
+
+.journeyForm {
+    margin-top: 150px;
+    @media (max-width: 648px) {
+        margin-top: 600px;
+      }
+  }
+  
 
 .removet {
     margin-top: 1em;
